# MatrixProfile

./: CMakeLists.txt  LICENSE  README.md
sample/: testA.txt
src/: fft.h  main.cpp  stomp.h
test/: main.cpp
